--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helo Byd</title>
-    <script>javascript.js</script>
+    
+    <script src="javascript.js"></script></script>
 </head>
 <body>
     
